2003-10-12  James Henstridge  <james@daa.com.au>

	* bootstrap.py (bootstraps): update automake-1.7 to 1.7.8

2003-10-10  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: use gnome-2-4 revision of metacity.

2003-10-08  James Henstridge  <james@daa.com.au>

	* jamesh.jhbuildrc: override cairo.freedesktop.org CVS root for my
	config file.

	* modulesets/gnome26.modules (cairo): same here.

	* modulesets/gnome24.modules (cairo): change from keithp CVS to
	freedesktop CVS.

2003-10-07  James Henstridge  <james@daa.com.au>

	* modulesets/gnome26.modules: same changes here.

	* modulesets/gnome24.modules (gcalctool): depends on scrollkeeper
	(bug #117742).
	(gnome-panel): move scrollkeeper dep from gnome-applets (bug #117890).

	* bootstrap.py (bootstraps): update automake-1.7 to version 1.7.7.

	* module.py (MozillaModule.do_checkout): redo checkout of mozilla
	if client.mk sticky tag is wrong.

	* cvs.py (check_sticky_tag): simple program to find the sticky tag
	for a file.

	* module.py (MozillaModule.checkout): use the code in the cvs
	module to construct the CVS command line to checkout
	mozilla/client.mk.
	(MozillaModule.checkout): rather than exiting if you can't
	checkout mozilla/client.mk, just return the error result code,
	which do_checkout() should be able to handle correctly.

	* terminal_buildscript.py (TerminalBuildScript.execute): print the
	command that is about to be executed, like it did before.

	* module.py (MozillaModule.do_checkout): construct the path
	properly, so that it checks for Makefile.in in the mozilla
	directory.

2003-10-06  James Henstridge  <james@daa.com.au>

	* modulesets/gnome26.modules (mozilla): same here.

	* modulesets/gnome24.modules (mozilla): change attribute name.

	* module.py (read_module_set): s/branch/revision/ for
	<mozillamodule> elements.
	(MozillaModule.__init__): s/branch/revision/ here too for
	completeness.

2003-10-02  James Henstridge  <james@daa.com.au>
