@@ -1,6 +1,8 @@
 2003-10-12  James Henstridge  <james@daa.com.au>
 
 	* bootstrap.py (bootstraps): update automake-1.7 to 1.7.8
+	(Bootstrap.build): support bootstrapping from .bz2 files.
+	(bootstraps): update Python in bootstraps from 2.2.2 to 2.3.2.
 
 2003-10-10  Bryan Forbes  <mxpxfifws@yahoo.com>
 
